# url-shortener

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  api.html  application.cpp  application.h  conanfile.txt  database.cpp  database.h  database.py  docker-compose.yml  entrypoint.sh  humans.txt  main.cpp  notes.txt  out.html.in  passenger_wsgi.py  postgres.py  requirements.txt  shortener.py
docs/: deployment.puml
html/: api.html.in  err.html  err.html.in  key.html.in  key.html.j2  url.html.in  url.html.j2  web.html  web.html.in  web.html.j2
include/: application.h  config.h  config.h.in  database.h  logger.h  postgres.h  xkcd.h
include/xkcd/: client.h  impl.h  xkcd.h  xkcdxx.h
proxy-docker/: Dockerfile  README.md  build-n-push.sh  proxy.conf  ssl.conf
src/: application.cpp  database.cpp  logger.cpp  main.cpp  postgres.cpp  xkcd.cpp
src/xkcd/: client.cpp  impl.cpp  test.c  xkcd.cpp  xkcdxx.cpp
